--- a/src/styles/SingleTodo.css
+++ b/src/styles/SingleTodo.css
@@ -3,6 +3,10 @@
     justify-content: space-between;
 }
 
+.strikethrough {
+    text-decoration: line-through;
+}
+
 .button-container {
     margin-right: 1em;
     gap: 1em
